--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_multi_formatter: ^2.12.8
   image_picker: ^1.1.1
+  firebase_core: ^2.31.0
+  firebase_auth: ^4.19.5
+  google_sign_in: ^6.2.1
+  flutter_riverpod: ^2.5.1
 
 dev_dependencies:
   flutter_test:
