--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_auth: ^4.19.5
   google_sign_in: ^6.2.1
   flutter_riverpod: ^2.5.1
+  connectivity_plus: ^6.0.3
 
 dev_dependencies:
   flutter_test:
